--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <header>
             <h1><i class="fas fa-users"></i> Personel Takip Sistemi</h1>
-            <p>Giyim Mağazası Yönetim Paneli</p>
+            <p>1854 - Bilecik Bozüyük</p>
         </header>
 
         <nav class="tab-nav">
