--- a/public/index.html
+++ b/public/index.html
@@ -234,6 +234,9 @@
                                 <button class="btn btn-info btn-lg" onclick="showLastAIAnalysis()" id="show-last-ai-analysis-btn" disabled>
                                     <i class="fas fa-history"></i> Son Analizi Görüntüle
                                 </button>
+                                <button class="btn btn-secondary btn-lg" onclick="showAnalysisHistory()" id="show-analysis-history-btn" disabled>
+                                    <i class="fas fa-list"></i> Analiz Geçmişi
+                                </button>
                             </div>
                             
                             <div class="analysis-features">
